WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239436
Unreviewed, non-unified build fixes after
249632@main
https://bugs.webkit.org/show_bug.cgi?id=239436
Summary
Unreviewed, non-unified build fixes after 249632@main
Lauro Moura
Reported
2022-04-17 11:27:09 PDT
Unreviewed, non-unified build fixes after
249632@main
Attachments
Patch
(2.77 KB, patch)
2022-04-17 11:28 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2022-04-17 11:28:11 PDT
Created
attachment 457775
[details]
Patch
EWS
Comment 2
2022-04-17 14:02:18 PDT
Committed
r292949
(
249714@main
): <
https://commits.webkit.org/249714@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457775
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-17 14:03:13 PDT
<
rdar://problem/91869223
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug