Unreviewed, non-unified build fixes after 249632@main https://bugs.webkit.org/show_bug.cgi?id=239436

* workers/DedicatedWorkerThread.cpp:
* workers/WorkerGlobalScope.cpp:
* workers/WorkerScriptLoader.cpp:
* workers/service/ServiceWorkerClientData.cpp:

Canonical link: https://commits.webkit.org/249714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292949 268f45cc-cd09-0410-ab3c-d52691b4dbfc