Source/WebCore/workers/service/ServiceWorkerClientData.cpp
@@ -33,6 +33,7 @@
 #include "DocumentLoader.h"
 #include "Frame.h"
 #include "SWClientConnection.h"
+#include "WorkerGlobalScope.h"
 #include <wtf/CrossThreadCopier.h>
 
 namespace WebCore {
